# Furniture

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  app.py  auth.py  bed.py  decorators.py  mydb.sqlite  pyproject.toml  pytest.ini  requirements.txt  sample_data.db  schema.py  services.py  services_user.py
.github/actions/basic_setup/: action.yaml
.github/workflows/: lint_and_format.yaml  unit-tests.yaml
source/API/: checkout_api.py  furniture_routes.py
source/controller/: cart.py  checkout_service.py  furniture_inventory.py  order.py  payment_gateway.py  user.py
source/database/: beds_data.json  inventory.json
source/furniture/: cli.py
source/models/: Inventory.py  Order.py  OrderStatus.py  User.py  __init__.py  checkout.py  inventory.py
source/services/: cart_manager.py  checkout_service.py  database.py  furniture_service.py  order_manager.py  payment_gateway.py
tests/: decorators.py  test_app.py  test_checkout.py  test_checkout_api.py  test_checkout_integrations.py  test_checkout_service.py  test_e2e.py  test_order.py  test_order_manager.py  test_payment_gateway.py  test_unit-tests.py
tests/furnitures/: test_database_tables.py  test_furniture_services.py
tests/test_data/: beds_data.json  bookshelves_data.json  chairs_data.json  furniture_data.json  inventory.json  sofas_data.json  tables_data.json
tests/tests_unit_tests/: test_unit-test_cart.py  test_unit-tests_order.py  test_unit-tests_user.py  test_unit_test_inventory.py  test_unit_test_payment_gateway.py  test_unit_tests_cart.py  test_unit_tests_checkout_service.py
(+20 files in other folders)
