[tool.poetry]
name = "furniture"
version = "0.1.0"
description = "the furniture store"
authors = ["AUTHOR_NAME_HERE"]
readme = "README.md"
packages = [
    { include = "furniture", from = "source" },
]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
furniture-cli = "furniture.cli:main"
